# temp_1

./: .gitignore  README.md
ASP_Web/: ASP_Web.sln
ASP_Web/Proj2/: App.razor  Program.cs  Proj2.csproj  _Imports.razor  appsettings.json  libman.json  local_sqlite.db  local_sqlite.db-shm  local_sqlite.db-wal
ASP_Web/Proj2/Code/: ItemData.cs  (+11 more)
ASP_Web2/: ASP_Web2.sln  App.razor  Program.cs  Proj2.csproj  _Imports.razor  appsettings.json  appsettings.prod.json  libman.json
ASP_Web2/Code/: ConfigurationService.cs  CookieController.cs  GarbageCollector.cs  InputFormatters.cs  JsonUtils.cs  KeyValueOptions.cs  PasswdManager.cs  Structures.cs  Utils.cs
ASP_Web2/Database/: DbTables.cs
ASP_Web2/Hubs/: ComHub.cs
ASP_Web2/Models/: PregledUpraveModel.cs
ASP_Web2/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  Login.razor  Permissions.razor  Uprave.razor  _Host.cshtml  _Layout.cshtml
ASP_Web2/Properties/: launchSettings.json
ASP_Web2/Shared/: AddressView.razor  ChartModal.razor  MainLayout.razor.css  QueryModal.razor
microcontroller/: readme.md
microcontroller/Core3/: .clang-format  CMakeLists.txt  platformio.ini
microcontroller/Core3/include/: core3.h  core3_array.h  core3_object.h
microcontroller/Core3/src/: core3.cpp  core3_array.c  core3_bootstrap.c  core3_object.c  core3_subsystem.c  main.c  main.cpp  yolo.cpp
microcontroller/ESP32_HTTPS_server_sample2/: platformio.ini
microcontroller/ESP32_RTOS_interrupt_queue/: platformio.ini
microcontroller/NanoCore/: NanoCore.sln
microcontroller/core2/: app_flash.csv  app_flash_can.csv  platformio.ini
(+104 files in other folders)
